# axum-fshare

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
doc/: notebook.md
src/: api.rs  cli.rs  main.rs  zip_utils.rs
