[package]
name = "axum-fshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.6"
clap = { version = "4", features = ["derive"] }
qrrs = "0.1.9"
